--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.github.irshulx:laser-native-editor:3.0.3'
+    implementation 'com.github.duanhong169:colorpicker:1.1.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'com.karumi:dexter:5.0.0'
@@ -67,4 +68,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'cn.jzvd:jiaozivideoplayer:6.2.9'
+    implementation 'io.github.lizhangqu:coreprogress:1.0.2'
+    implementation 'com.github.clans:fab:1.6.2'
 }
