--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Activity.New.ListPostActivity">  </activity>
+        <activity android:name=".Activity.New.ListBannerActivity"></activity>
         <activity android:name=".Activity.New.Main1Activity" />
         <activity android:name=".Activity.New.Main2Activity" />
         <activity android:name=".Activity.New.Main4Activity" />
@@ -34,7 +35,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Activity.ActivityDesigner" />
         <activity android:name=".Activity.AboutActivity" />
-        <activity android:name=".Activity.RememberPasswordActivity" />
+        <activity android:name=".Activity.New.RememberPasswordActivity" />
         <activity android:name=".Activity.StirActivity" />
         <activity android:name=".Activity.ContactUsActivity" />
         <activity android:name=".Activity.RulesActivity" />
@@ -45,13 +46,14 @@
             android:value="AIzaSyAI_kveeeGMtMwh0qG1gyTJdJV65FSagv4" />
 
         <activity android:name=".Activity.SplashActivity" />
-        <activity android:name=".Activity.LoginActivity" ><intent-filter>
+        <activity android:name=".Activity.New.LoginActivity" > <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+        </intent-filter> </activity>
         <activity android:name=".Activity.Map2Activity" />
         <activity android:name=".Activity.New.SendPostActivity"></activity>
+        <activity android:name=".Activity.New.SendBannerActivity"></activity>
         <activity android:name=".Activity.New.ShowPostActivity">
 
         </activity>
