--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,11 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Activity.New.ListPostActivity"></activity>
-        <activity android:name=".Activity.New.ListSendCategoryActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Activity.New.ListCategoryActivity">
+
         </activity>
         <activity android:name=".Activity.New.ListBannerActivity"></activity>
+        <activity android:name=".Activity.New.SendCategoryActivity" />
         <activity android:name=".Activity.New.Main1Activity" />
         <activity android:name=".Activity.New.Main2Activity" />
         <activity android:name=".Activity.New.Main4Activity" />
@@ -52,7 +50,10 @@
             android:value="AIzaSyAI_kveeeGMtMwh0qG1gyTJdJV65FSagv4" />
 
         <activity android:name=".Activity.SplashActivity" />
-        <activity android:name=".Activity.New.LoginActivity"></activity>
+        <activity android:name=".Activity.New.LoginActivity"> <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
         <activity android:name=".Activity.Map2Activity" />
         <activity android:name=".Activity.New.SendPostActivity"></activity>
         <activity android:name=".Activity.New.SendBannerActivity"></activity>
