--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,17 +59,17 @@
 
         <activity android:name=".Activity.SplashActivity" />
         <activity android:name=".Activity.New.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".Activity.Map2Activity" />
         <activity android:name=".Activity.New.SendPostActivity" />
         <activity android:name=".Activity.New.SendBannerActivity" />
         <activity android:name=".Activity.New.SelectCategoryActivity" />
-        <activity android:name=".Activity.New.ShowPostActivity"><intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+        <activity android:name=".Activity.New.ShowPostActivity"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
