--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".Activity.New.SendStudentGroupNameActivity" />
         <activity android:name=".Activity.New.ListStudentActivity" />
         <activity android:name=".Activity.New.ListPostActivity" />
+        <activity android:name=".Activity.New.ProfileActivity" />
+        <activity android:name=".Activity.New.BookmarkListActivity" />
         <activity android:name=".Activity.New.ListTeacherActivity" />
         <activity android:name=".Activity.New.ListAsatidActivity" />
         <activity android:name=".Activity.New.ListCategoryActivity"></activity>
