--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,16 @@
         <activity android:name=".Activity.New.PdfActivity"></activity>
         <activity android:name=".Activity.New.ListCommentTeacherActivity"></activity>
         <activity android:name=".Activity.New.ListPostAsatidActivity" />
+        <activity android:name=".Activity.New.ListTeacherNameActivity" ></activity>
         <activity android:name=".Activity.New.ListCommentActivity" ></activity>
         <activity android:name=".Activity.New.SendCommentActivity" >    </activity>
+        <activity android:name=".Activity.New.SendTeacherGroupNameActivity" />
         <activity android:name=".Activity.New.ListStudentNameActivity" />
         <activity android:name=".Activity.New.SendStudentGroupNameActivity" />
         <activity android:name=".Activity.New.ListStudentActivity" />
         <activity android:name=".Activity.New.ListPostActivity" />
         <activity android:name=".Activity.New.SendAnnouncementActivity" />
+        <activity android:name=".Activity.New.ListTeacher2Activity" />
         <activity android:name=".Activity.New.ProfileActivity" />
         <activity android:name=".Activity.New.BookmarkListActivity" />
         <activity android:name=".Activity.New.ListTeacherActivity" />
